# rag2web

./: MakeFile  README.md  main.py  main_not_optimized.py  pyproject.toml
faiss_indexes/: index_3224.faiss  index_8792.faiss  metadata_1853.pkl  metadata_3224.json  metadata_8792.json
